tests/build/cases/widget_new/property_generic1.stderr
error[E0283]: type annotations needed
 --> cases/widget_new/property_generic1.rs:6:9
  |
6 |         value = 0;
  |         ^^^^^ cannot infer type of the type parameter `T` declared on the struct `value`
  |
  = note: cannot satisfy `_: VarValue`
note: required by a bound in `zero_ui::widgets::checkbox::value::<T>::__new__`
 --> $WORKSPACE/zero-ui/src/widgets/toggle_wgt.rs
  |
  |     pub fn value<T: VarValue + PartialEq>(child: impl UiNode, value: impl IntoVar<T>) -> impl UiNode {
  |                     ^^^^^^^^ required by this bound in `zero_ui::widgets::checkbox::value::<T>::__new__`
help: consider specifying the generic argument
    |
6   |         value::<T> = 0;
    |              +++++

error[E0283]: type annotations needed
 --> cases/widget_new/property_generic1.rs:6:9
  |
6 |         value = 0;
  |         ^^^^^ cannot infer type of the type parameter `T` declared on the struct `value`
  |
  = note: multiple `impl`s satisfying `i32: IntoVar<_>` found in the `zero_ui_core` crate:
          - impl IntoVar<CornerRadius> for i32;
          - impl IntoVar<GridSpacing> for i32;
          - impl IntoVar<SideOffsets> for i32;
          - impl IntoVar<Vector> for i32;
          and 5 more
note: required by a bound in `zero_ui::widgets::checkbox::value::<T>::__new__`
 --> $WORKSPACE/zero-ui/src/widgets/toggle_wgt.rs
  |
  |     pub fn value<T: VarValue + PartialEq>(child: impl UiNode, value: impl IntoVar<T>) -> impl UiNode {
  |                                                                           ^^^^^^^^^^ required by this bound in `zero_ui::widgets::checkbox::value::<T>::__new__`
help: consider specifying the generic argument
    |
6   |         value::<T> = 0;
    |              +++++
